# MACG

./: CMakeLists.txt
alacritty/: alacritty.toml
fcitx5/: config  profile_YBpdeK
fish/: config.fish  fish_variables
fish/functions/: hihi.fish  links_format.fish  mfilename.fish  page_name_output.fish
i3/: config
include/: Animation.hpp  MG.hpp  MSDL.hpp  SDL.hpp  Tile.hpp  Utilities.hpp  geometry.hpp  mECS2.hpp
nvim/: init.lua  lazy-lock.json
nvim_custom/: init.lua
polybar/: config.ini  launch.sh
